add analysis of flight data, modify presenter notes and some presentations

--- a/non_website/01_openscience.html
+++ b/non_website/01_openscience.html
@@ -116,11 +116,25 @@
           </hgroup>
   </slide>
 
-<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Presentation</h2></hgroup><article  id="presentation">
+<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Outline</h2></hgroup><article  id="outline">
 
 <ul class = 'build'>
-<li>your name</li>
+<li>Website as an output of this workshop, each one of you working with one of your own experiment</li>
+<li>End of day 1: adding a page about yourself and a data managment plan</li>
+<li>End of day 2: adding a blog post as a report for one experiment (M&amp;M,result)</li>
+</ul>
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Presentation</h2></hgroup><article  id="presentation">
+
+<ul class = 'build'>
+<li>tell us (1 min)
+
+<ul class = 'build'>
+<li>your name, your PI</li>
 <li>one sentence about your scientific project</li>
+<li>One sentence about yourself outside of the lab</li>
+</ul></li>
+<li>one card with your name and the experiment you will work on</li>
 <li>one card tell about why you choose to be a scientist</li>
 </ul>
 
