--- a/non_website/14_repr_analysis.html
+++ b/non_website/14_repr_analysis.html
@@ -207,7 +207,7 @@ print(output_value)</pre>
 
 <pre >## R version 3.5.0 (2018-04-23)
 ## Platform: x86_64-apple-darwin15.6.0 (64-bit)
-## Running under: macOS  10.14
+## Running under: macOS  10.14.1
 ## 
 ## Matrix products: default
 ## BLAS: /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib
@@ -220,21 +220,27 @@ print(output_value)</pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-## [1] bookdown_0.7
+## [1] ggplot2_3.0.0  bindrcpp_0.2.2 dplyr_0.7.6    readr_1.1.1   
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_0.12.19        rstudioapi_0.8      xml2_1.2.0         
-##  [4] knitr_1.20          servr_0.10          magrittr_1.5       
-##  [7] knitcitations_1.0.8 R6_2.3.0            bibtex_0.4.2       
-## [10] plyr_1.8.4          stringr_1.3.1       httr_1.3.1         
-## [13] tools_3.5.0         xfun_0.3            htmltools_0.3.6    
-## [16] yaml_2.2.0          rprojroot_1.3-2     digest_0.6.17      
-## [19] formatR_1.5         RefManageR_1.2.0    later_0.7.5        
-## [22] base64enc_0.1-3     promises_1.0.1      curl_3.2           
-## [25] rsconnect_0.8.8     evaluate_0.11       mime_0.6           
-## [28] rmarkdown_1.10      blogdown_0.8        stringi_1.2.4      
-## [31] compiler_3.5.0      backports_1.1.2     lubridate_1.7.4    
-## [34] jsonlite_1.5        httpuv_1.4.5</pre></article></slide>
+##  [1] Rcpp_0.12.19        formatR_1.5         plyr_1.8.4         
+##  [4] pillar_1.3.0        compiler_3.5.0      bindr_0.1.1        
+##  [7] base64enc_0.1-3     tools_3.5.0         digest_0.6.17      
+## [10] lubridate_1.7.4     jsonlite_1.5        evaluate_0.11      
+## [13] tibble_1.4.2        gtable_0.2.0        pkgconfig_2.0.2    
+## [16] rlang_0.2.2         bibtex_0.4.2        cli_1.0.1          
+## [19] rstudioapi_0.8      curl_3.2            yaml_2.2.0         
+## [22] blogdown_0.8        xfun_0.3            xml2_1.2.0         
+## [25] httr_1.3.1          RefManageR_1.2.0    withr_2.1.2        
+## [28] stringr_1.3.1       knitr_1.20          knitcitations_1.0.8
+## [31] hms_0.4.2           rprojroot_1.3-2     grid_3.5.0         
+## [34] tidyselect_0.2.5    glue_1.3.0          R6_2.3.0           
+## [37] fansi_0.4.0         rmarkdown_1.10      bookdown_0.7       
+## [40] purrr_0.2.5         magrittr_1.5        backports_1.1.2    
+## [43] scales_1.0.0        htmltools_0.3.6     assertthat_0.2.0   
+## [46] mime_0.6            colorspace_1.3-2    labeling_0.3       
+## [49] utf8_1.1.4          stringi_1.2.4       lazyeval_0.2.1     
+## [52] munsell_0.5.0       crayon_1.3.4</pre></article></slide>
 
 
   <slide class="backdrop"></slide>
